# kursrksp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
client/: app.js  index.html  styles.css
docs/: 12-factor.md  deployment.md  domain-analysis.md  uml.md
docs/presentation/: corplink-messenger.pptx
scripts/: coverage_gate.py
server/: __init__.py  app.py  config.py  db.py  errors.py  httpd.py  rbac.py  security.py  validators.py
tests/: __init__.py  helpers.py  test_api_workflows.py  test_fuzzing.py  test_httpd_static.py  test_security_and_validation.py
