[project]
name = "corplink-messenger"
version = "1.0.0"
description = "Educational fullstack corporate messenger with channels, integrations, RBAC, fuzzing, Docker, and CI."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
]

[tool.coverage-gate]
target = "100%"
scope = "server core modules"
